# note-to-json-demo

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  memory_parser.py  memory_watcher.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_demo.bat  run_demo.py  start_watcher.bat  watch_config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  python-ci.yml
demo_entries/: creative_breakthrough.md  demo_entry.md  frustration_moment.md  peaceful_morning.md  team_collaboration.md
note_to_json/: __init__.py  cli.py  parser.py
note_to_json/utils/: encoding.py
tests/: __init__.py  _helpers.py  test_cli_integration.py  test_parser.py  test_resilience.py  test_stdin_modes.py  test_utf8_and_utf16_files.py
tests/fixtures/: sample.md
